--- a/ansible/zapd_cron.yml
+++ b/ansible/zapd_cron.yml
@@ -4,6 +4,14 @@
   become: yes
   become_user: root
 
+  vars:
+   dest_email: alerts@zap.me
+   min_zap: 5000
+   max_zap: 10000
+   testnet_node: testnet1.wavesnodes.com
+   mainnet_node: nodes.wavesnodes.com
+
+
   tasks:
     - name: create the scripts directory
       file:
@@ -12,7 +20,7 @@
         mode: 0755
         owner: root
         group: root
-    
+
     - name: copy the zapd_balance.sh using the template module
       template:
         src: templates/zapd_balance.sh
