--- a/ansible/zapd_cron.yml
+++ b/ansible/zapd_cron.yml
@@ -9,6 +9,12 @@
    max_zap: 10000
 
   tasks:
+    - name: set cron shell
+      cron:
+        name: SHELL
+        env: yes
+        value: /bin/bash
+
     - name: create the scripts directory
       file:
         path: /root/scripts
@@ -64,3 +70,17 @@
         month: "*"
         weekday: "*"
         job: /root/script/zapd_heartbeat.sh
+
+    - name: add cron job to expire transactions
+      cron:
+        name: expire zapd transactions
+        special_time: daily
+        job: >
+          curl -d '{"jsonrpc":"2.0","id":1,"method":"expiretransactions","params":{}}' -H "Content-Type: application/json-rpc" localhost:5000/api
+
+    - name: add cron job to snapshot dashboard
+      cron:
+        name: snapshot zapd dashboard
+        special_time: hourly
+        job: >
+          curl localhost:5000/dashboard/snapshot
