--- a/ansible/backup.yml
+++ b/ansible/backup.yml
@@ -19,27 +19,33 @@
       copy:
         src: "{{ BACKUP_KEY }}"
         dest: /tmp/backup.key
+      when: KEYS_SUPPLIED == 'true'
 
     - name: Install public backup key
       shell: gpg --import /tmp/backup.key
+      when: KEYS_SUPPLIED == 'true'
 
     - name: Print key info
       shell: gpg --import --import-options show-only --with-colons /tmp/backup.key
       register: key_info
+      when: KEYS_SUPPLIED == 'true'
 
     - name: Extract key ID
       set_fact: key_id={{ key_info.stdout | regex_search(fingerprint_pattern, '\\1') | first }}
       vars:
         fingerprint_pattern: "fpr:.*:.*:.*:.*:.*:.*:.*:.*:([A-Z0-9]*):"
+      when: KEYS_SUPPLIED == 'true'
 
     - name: trust gpg key
       shell: "echo {{ key_id }}:6: | gpg --import-ownertrust"
+      when: KEYS_SUPPLIED == 'true'
 
     - name: Copy ssh backup key
       copy:
         src: "{{ BACKUP_SSH_KEY }}"
         dest: /root/backup_id
         mode: 0600
+      when: KEYS_SUPPLIED == 'true'
 
     - name: accept new ssh fingerprints
       shell: ssh-keyscan -H {{ BACKUP_HOST }} >> ~/.ssh/known_hosts
@@ -49,3 +55,4 @@
         src: templates/backup_cron
         dest: /etc/cron.daily/01waves_backup
         mode: 0755
+      when: KEYS_SUPPLIED == 'true'
