--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -48,21 +48,21 @@
       when: VAGRANT == "true"
       ignore_errors: yes
 
-- include: backup.yml
+- import_playbook: backup.yml
   when: VAGRANT == "false"
-- include: updates.yml
+- import_playbook: updates.yml
   when: VAGRANT == "false"
-- include: postfix.yml
+- import_playbook: postfix.yml
   when: VAGRANT == "false"
-- include: nginx.yml
+- import_playbook: nginx.yml
   when: VAGRANT == "false"
-- include: firewall.yml
+- import_playbook: firewall.yml
   when: VAGRANT == "false"
-- include: logwatch.yml
+- import_playbook: logwatch.yml
   when: VAGRANT == "false"
-- include: fail2ban.yml
+- import_playbook: fail2ban.yml
   when: VAGRANT == "false"
-- include: java.yml
-- include: waves.yml
-- include: zapd.yml
-- include: zapd_cron.yml
+- import_playbook: java.yml
+- import_playbook: waves.yml
+- import_playbook: zapd.yml
+- import_playbook: zapd_cron.yml
