--- a/ansible/zapd.yml
+++ b/ansible/zapd.yml
@@ -58,7 +58,7 @@
 
     - name: set webhook config
       shell: /opt/zapd/set_webhook_config.py {{ WEBHOOK_URL }} {{ WEBHOOK_KEY }}
-      when: KEYS_SUPPLIED == 'true'
+      when: KEYS_SUPPLIED
 
     - name: copy zapd.service
       template:
