--- a/zapd/requirements.txt
+++ b/zapd/requirements.txt
@@ -1,4 +1,4 @@
-# greenlet version 0.4.14 has ABI change which causes crash on win/osx
+# greenlet version 1.4.14 has ABI change which causes crash on win/osx
 # https://github.com/gevent/gevent/issues/1260
 greenlet==0.4.13
 gevent==1.3.4
@@ -11,3 +11,7 @@ requests==2.20.0
 sqlalchemy==1.3.3
 marshmallow==2.15.3
 pywaves==0.8.14
+Werkzeug==0.16.1
+email-validator==1.1.2
+qrcode==6.1
+jsbeautifier==1.11.0
