--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# greenlet version 0.4.14 has ABI change which causes crash on win/osx
+# greenlet version 1.4.14 has ABI change which causes crash on win/osx
 # https://github.com/gevent/gevent/issues/1260
 greenlet==0.4.13
 gevent==1.3.4
@@ -15,3 +15,7 @@ sqlalchemy==1.3.3
 marshmallow==2.15.3
 psycopg2-binary==2.8.1
 pywaves==0.8.14
+Werkzeug==0.16.1
+email-validator==1.1.2
+qrcode==6.1
+jsbeautifier==1.11.0
