--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 # greenlet version 1.4.14 has ABI change which causes crash on win/osx
 # https://github.com/gevent/gevent/issues/1260
-greenlet==0.4.13
 Flask-JSONRPC==0.3.1
 Flask-Admin==1.5.4
 Flask-Security==1.7.5
@@ -19,3 +18,4 @@ qrcode==6.1
 jsbeautifier==1.11.0
 gevent==20.9.0
 gevent-websocket==0.10.1
+greenlet 0.4.17
