changes to reload nginx when certificate is renewed.

--- a/ansible/nginx.yml
+++ b/ansible/nginx.yml
@@ -70,4 +70,4 @@
       cron:
         name: letsencrypt_renewal
         special_time: daily
-        job: letsencrypt renew --post-hook "service nginx reload"
+        job: letsencrypt renew --post-hook "/usr/sbin/service nginx reload"
